src/test/deca/syntax/invalid/renduInter01/06while_missing_parent.deca
// Description:
//      tests de programme incorrecte lexicalement (il manque deux parentheses)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : manque de parenthese

{
    int x = 4;
    while x == 4 {
        x = 3;
    }

}
